Changed password MAX_LENGTH to 32
And changed version string to "1.1.1-next"
Also fixed some small typos.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-For installation instructions see INSTALL file.
+For installation instructions see INSTALL.
 
 passwords -- Random Password Generator.
 
